[package]
name = "apex-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
firebase-rs = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
crossbeam = "0.8"
parking_lot = "0.12"